updated gemfile bundle

--- a/modular.html
+++ b/modular.html
@@ -32,6 +32,26 @@ blocks:
         - image: https://images.unsplash.com/photo-1687291834006-3c1a3c7d7ff3?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
           alt:
     button-text: Contact us
-
+  - id: text-and-image-grid
+    heading: another heading
+    text-1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ullam debitis ipsa nemo unde omnis nisi, corporis ex asperiores minus sequi perferendis alias. Nisi quod vero incidunt, sapiente reiciendis ducimus!
+    text-2: Temporibus ullam debitis ipsa nemo unde omnis nisi, corporis ex asperiores minus sequi perferendis alias. Nisi quod vero incidunt, sapiente reiciendis ducimus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    button-text: learn more
+    image: https://images.unsplash.com/photo-1603806450478-18e70c5e8a94?q=80&w=2235&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+  - id: bold-text-section
+    text: Sometimes all you need is a big random block of text to really drive home the point.
+  - id: facts-section
+    facts-loop:
+      - heading: Fish
+        fact: 1 Mil
+      - heading: Depth
+        fact: 200M
+      - heading: Happy divers
+        fact: 500+
+    text: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis error sunt aliquam cumque architecto molestiae omnis voluptatem perferendis, amet vero voluptas maiores repellendus modi magnam excepturi facere ratione est? Tenetur!
+  - id: image-banner
+    photo-banner:
+      image: 'https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+      alt:
 ---
     
