--- a/modular.html
+++ b/modular.html
@@ -85,26 +85,30 @@ blocks:
       alt:
     image: >-
       https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-  - id: image-grid-section
-    heading: Another one
-    photos:
-      - image: >-
-          https://images.unsplash.com/photo-1580113224483-6e03c7b6fe6a?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        alt:
-      - image: >-
-          https://images.unsplash.com/photo-1563967949-d97cba787cae?q=80&w=2322&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        alt:
-      - image: >-
-          https://images.unsplash.com/photo-1708711973477-1373f8eb65db?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        alt:
-      - image: >-
-          https://images.unsplash.com/photo-1666136242426-761b173a1412?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        alt:
-      - image: >-
-          https://images.unsplash.com/photo-1582790269393-a54326674cf3?q=80&w=2235&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        alt:
-      - image: >-
-          https://images.unsplash.com/photo-1687291834006-3c1a3c7d7ff3?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        alt:
-    button-text: Contact us
+  - - id: facts-section
+      facts-loop:
+        - heading: Fact
+          fact: 1 Mil
+        - heading: Fact
+          fact: 200M
+        - heading: Fact
+          fact: 500+
+      text: >-
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
+        error sunt aliquam cumque architecto molestiae omnis voluptatem
+        perferendis, amet vero voluptas maiores repellendus modi magnam
+        excepturi facere ratione est? Tenetur!
+  - id: facts-section
+    facts-loop:
+      - heading: Fact
+        fact: 1 Mil
+      - heading: Fact
+        fact: 200M
+      - heading: Fact
+        fact: 500+
+    text: >-
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis error
+      sunt aliquam cumque architecto molestiae omnis voluptatem perferendis,
+      amet vero voluptas maiores repellendus modi magnam excepturi facere
+      ratione est? Tenetur!
 ---
