--- a/modular.html
+++ b/modular.html
@@ -80,10 +80,9 @@ blocks:
       ratione est? Tenetur!
   - id: image-banner
     photo-banner:
-      image: >-
-        https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      image: 
       alt:
-    image: https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+    image:
   - id: facts-section
       facts-loop:
         - heading: Fact
