--- a/modular.html
+++ b/modular.html
@@ -5,10 +5,9 @@ blocks:
   - id: bold-heading
     main-heading: This is a fun heading
   - id: image-banner
-    photo-banner:
-      image: >-
-        https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-      alt:
+    image: >-
+      https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+    alt:
     image: >-
       https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
   - id: info-section
@@ -85,15 +84,15 @@ blocks:
       alt:
     image: >-
       https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-  - - id: facts-section
-      facts-loop:
+  - id: facts-section
+    facts-loop:
         - heading: Fact
           fact: 1 Mil
         - heading: Fact
           fact: 200M
         - heading: Fact
           fact: 500+
-      text: >-
+    text: >-
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
         error sunt aliquam cumque architecto molestiae omnis voluptatem
         perferendis, amet vero voluptas maiores repellendus modi magnam
