--- a/modular.html
+++ b/modular.html
@@ -8,8 +8,6 @@ blocks:
     image: >-
       https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
     alt:
-    image: >-
-      https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
   - id: info-section
     columns:
       - heading: Heading
@@ -78,21 +76,35 @@ blocks:
       amet vero voluptas maiores repellendus modi magnam excepturi facere
       ratione est? Tenetur!
   - id: image-banner
-    image: https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+    image: >-
+      https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
     alt:
   - id: facts-section
     facts-loop:
-        - heading: Fact
-          fact: 1 Mil
-        - heading: Fact
-          fact: 200M
-        - heading: Fact
-          fact: 500+
+      - heading: Fact
+        fact: 1 Mil
+      - heading: Fact
+        fact: 200M
+      - heading: Fact
+        fact: 500+
     text: >-
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
-        error sunt aliquam cumque architecto molestiae omnis voluptatem
-        perferendis, amet vero voluptas maiores repellendus modi magnam
-        excepturi facere ratione est? Tenetur!
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis error
+      sunt aliquam cumque architecto molestiae omnis voluptatem perferendis,
+      amet vero voluptas maiores repellendus modi magnam excepturi facere
+      ratione est? Tenetur!
+  - id: facts-section
+    facts-loop:
+      - heading: Fact
+        fact: 1 Mil
+      - heading: Fact
+        fact: 200M
+      - heading: Fact
+        fact: 500+
+    text: >-
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis error
+      sunt aliquam cumque architecto molestiae omnis voluptatem perferendis,
+      amet vero voluptas maiores repellendus modi magnam excepturi facere
+      ratione est? Tenetur!
   - id: facts-section
     facts-loop:
       - heading: Fact
