Updated 1 file via CloudCannon.

--- a/modular.html
+++ b/modular.html
@@ -113,6 +113,8 @@ blocks:
         fact: 200M
       - heading: Fact
         fact: 500+
+      - heading: dan
+        fact: right here now
     text: >-
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis error
       sunt aliquam cumque architecto molestiae omnis voluptatem perferendis,
