--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ blocks:
     image: >-
       https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
     alt:
+    image-horizontal-focal-point: center
+    image-vertical-focal-point: center
   - id: info-section
     columns:
       - heading: Heading
@@ -44,6 +46,7 @@ blocks:
           https://images.unsplash.com/photo-1687291834006-3c1a3c7d7ff3?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
     button-text: Contact us
+    button-link: 
   - id: text-and-image-grid
     heading: another heading
     text-1: >-
@@ -56,8 +59,13 @@ blocks:
       reiciendis ducimus! Lorem ipsum dolor sit amet consectetur adipisicing
       elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
     button-text: learn more
+    button-link: /index.html
     image: >-
       https://images.unsplash.com/photo-1603806450478-18e70c5e8a94?q=80&w=2235&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+    alt:
+    image-placement: right
+    image-horizontal-focal-point: center
+    image-vertical-focal-point: center
   - id: bold-text-section
     text: >-
       Sometimes all you need is a big random block of text to really drive home
@@ -79,4 +87,6 @@ blocks:
     image: >-
       https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
     alt:
+    image-horizontal-focal-point: center
+    image-vertical-focal-point: center
 ---
